Updated MadiumService to do checks on Paths instead of Strings